Small text change.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>CV</h2>
-						<p>My acedemic CV can be downloaded <i>here</i></p>
+						<p>My acedemic CV can be downloaded <i>here (coming soon)</i></p>
 						<h4>My story in a few words</h4>
 						<p> <span class="image left"><img src="images/Hannover.jpg" alt="Leibniz University Hannover" /></span> <b>Bachelor and Master Studies in Hanover </b>
 							<br>In 2010, I started my scientific journey with the admission to the biochemistry program at the Leibniz University in Hanover, Germany. Choosing a field of study for the undergrad was quite challenging as I had a broad interest in natural sciences and math but also felt that the application and translation of basic science were important. The biochemistry program in Hanover was a collaboration between University and Medical school aiming to provide a broad basic science education combined with the prospect of medical applications, so it was a great fit for me. In addition, I had the chance to enjoy the life in a vibrant city offering a great mix of music scenes, history, and nature. <br>
