Adding new area of research

--- a/index.html
+++ b/index.html
@@ -108,6 +108,16 @@
 									<a href="https://pubs.acs.org/doi/10.1021/acsnano.8b04080" target = "_blank">Schneider et al., ACS Nano (2018)</a><br>
 								</p>
 							</article>
+							<article class="col-12 col-12-xsmall work-item">
+								<a href="images/Fish_mol_biol2.png" class="image fit thumb"><img src="images/Fish_mol_biol2.png" alt="" /></a>
+								<h3><u>Studying molecular interactions in physiological context</u></h3>
+								<p>Fundamental biological processes, including signal transduction, cellular differentiation, and cell migration, hinge upon single molecule interactions within living systems. Yet, these interactions are often studied in isolated conditions, such as using reconstituted proteins in solution or transfected cells in culture. To delve into more intricate biological questions, it is essential to investigate these interactions within the full physiological context, specifically within tissues and whole organisms. My recent research focuses on utilizing zebra fish as a model system to explore the influence of protein and nucleic acid interactions on early development. I employ standard and advanced molecular biology techniques for genetic modifications and have initiated the optimization of fluorescence fluctuation approaches and fluorescent probes for <i>in vivo</i> applications. This effort is geared towards enabling the observation of single molecule interactions using readily available instrumentation, facilitating the investigation of cellular signaling networks in developing tissues.  </p>
+								<p><b>Key Publications:</b></p>
+								<p>
+									Coming soon :)<br>
+								</p>
+							</article>
+
 
 						</div>
 					</section>
