Updating publication list.

--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@
 									<h4>Published Research Articles</h4>
 									<ol reversed>
 										<li>
+											Schneider F, Cespedes PF, Karedla N, Dustin ML, Fritzsche M. <br> 
+											<i>Quantifying biomolecular organisation in membranes with brightness-transit statistics</i><br> 
+											<a href="https://www.nature.com/articles/s41467-024-51435-1" target = "_blank"> Nat Commun 15, 7082</a>. 2024 <br>
+										</li>
+										<li>
 											Mørch AM, Schneider F, Jenkins E, Santos AM, Fraser SE, Davis SJ, Dustin ML. <br> 
 											<i>The kinase occupancy of T cell coreceptors reconsidered </i><br> 
 											<a href="https://www.pnas.org/doi/10.1073/pnas.2213538119" target = "_blank">PNAS 119 (49)</a>. 2022 <br>
