--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 											Schneider F, Cespedes PF, Karedla N, Dustin ML, Fritzsche M. <br> 
 											<i>Quantifying biomolecular organisation in membranes with brightness-transit statistics</i><br> 
 											<a href="https://www.nature.com/articles/s41467-024-51435-1" target = "_blank"> Nat Commun 15, 7082</a>. 2024 <br>
+											Featured by <a href="https://www.kennedy.ox.ac.uk/news/new-microscopy-method-can-pinpoint-molecular-interactions-in-cell-membranes" target = "_blank">KIR/NDORMS News</a>
 										</li>
 										<li>
 											Mørch AM, Schneider F, Jenkins E, Santos AM, Fraser SE, Davis SJ, Dustin ML. <br> 
