Small changes and updates to affiliation and publications

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 						<strong>Falk Schneider, PhD</strong><br />
 					</h1>
 					<h5>
-						EMBO and HFSP Postdoctoral Fellow at <br />
+						Incoming Assistant Professor at University of Warwick <br /> (Lab doors open March 2025) <br />
+						Currently, EMBO and HFSP Postdoctoral Fellow at <br />
 						<a href="https://bioimage.usc.edu/" target = "_blank">Translational Imaging Center</a>, <br />University of Southern California
 					</h5>
 					<a class="active" href="#one">About me</a>
@@ -69,6 +70,7 @@
 								<p>Fluorescence fluctuation spectroscopy (FFS) and especially fluorescence correlation spectroscopy (FCS) are commonly employed tools to study diffusion dynamics and changes in concentrations or oligomeric states. My research focuses on the application and further development of FCS in conjunction with super-resolution stimulated emission depletion (STED) microscopy. STED-FCS enables to measure diffusion dynamics directly on the nano-scale and even allows to map hindrances in diffusion (for example binding sites) across space. While STED-FCS provides unchallenged resolution for fluctuation spectroscopy, it requires special hardware. To make the nano-scale diffusion measurements more accessible, I work on confocal scanning FCS (sFCS) pipelines exploiting statistical tricks to access hidden dynamics in the measured ensemble. Currently, I am focussing my efforts to enable the detection of oligomerisation using sFCS. </p>
 								<p><b>Key Publications:</b></p>
 								<p>
+									<a href="https://www.nature.com/articles/s41467-024-51435-1" target = "_blank">Schneider et al., Nature Comms (2024)</a><br>
 									<a href="https://iopscience.iop.org/article/10.1088/1361-6463/ab6cca" target = "_blank">Schneider et al., J Phys D Appl Phys (2020)</a><br>
 									<a href="https://www.nature.com/articles/s41596-019-0127-9" target = "_blank">Sezgin et al., Nat Protoc (2019)</a><br>
 									<a href="https://pubs.acs.org/doi/10.1021/acs.nanolett.8b02291" target = "_blank">Schneider et al., Nano Lett (2018)</a><br>
@@ -93,7 +95,7 @@
 								<p>Cells are heterogeneous in their structure and organization: liquid condensates in the cytoplasm or nucleoplasm or nano-domain formation in the plasma membrane display only a small subset of possible means for the cell to compartmentalize signalling molecules. While measurements of diffusion dynamics can be used to infer organization, they are limited in spatial coverage. Smart probes, so called environment sensitive probes, overcome this issue. They can be used in imaging modality (with a large field of view) and change a certain fluorescence property according to the environment. For example, solvatochormic probes can report on lipid packing by a change in emission spectrum and can even be used in conjunction with super-resolution STED imaging. Another example is the Flipper probe that can report on membrane tension and is read out by changes in fluorescence lifetime. Recently, I have focussed on the use of the Flipper probe in <i>in vivo</i> settings such as mouse and zebra fish embryos and established that the dye can be efficiently used in conjunction with two-photon excitation. In addition, I have established the use of the Phasor analysis to aid visualisation of tension differneces. </p>
 								<p><b>Key Publications:</b></p>
 								<p>
-									<a href="https://www.biorxiv.org/content/10.1101/2022.09.28.509885v2" target = "_blank">Roffay et al., BioRxiv (2023)</a><br>
+									<a href="https://www.nature.com/articles/s41596-024-01027-6" target = "_blank">Roffay et al., Nat. Protoc. (2024)</a><br>
 									<a href="https://www.nature.com/articles/s41467-022-28590-4" target = "_blank">Royer et al., Nat Commun (2022)</a><br>
 									<a href="https://www.cell.com/biophysj/fulltext/S0006-3495(17)30700-2" target = "_blank">Sezgin et al., Biophys J (2017)</a><br>
 								</p>
@@ -163,7 +165,7 @@
 											Schneider F, Cespedes PF, Karedla N, Dustin ML, Fritzsche M. <br> 
 											<i>Quantifying biomolecular organisation in membranes with brightness-transit statistics</i><br> 
 											<a href="https://www.nature.com/articles/s41467-024-51435-1" target = "_blank"> Nat Commun 15, 7082</a>. 2024 <br>
-											Featured by <a href="https://www.kennedy.ox.ac.uk/news/new-microscopy-method-can-pinpoint-molecular-interactions-in-cell-membranes" target = "_blank">KIR/NDORMS News</a>
+											Featured by <a href="https://www.kennedy.ox.ac.uk/news/new-microscopy-method-can-pinpoint-molecular-interactions-in-cell-membranes" target = "_blank">KIR/NDORMS News</a> and <a href="https://www.rfi.ac.uk/new-technique-sheds-light-on-how-proteins-organise-and-move-on-cell-membranes/" target = "_blank">RFI News</a>
 										</li>
 										<li>
 											Mørch AM, Schneider F, Jenkins E, Santos AM, Fraser SE, Davis SJ, Dustin ML. <br> 
