--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>CV</h2>
-						<p>My acedemic CV can be downloaded <i>here (coming soon)</i></p>
+						<p>My academic CV can be downloaded <i>here (coming soon)</i></p>
 						<h4>My story in a few words</h4>
 						<p> <span class="image left"><img src="images/Hannover.jpg" alt="Leibniz University Hannover" /></span> <u><b>Bachelor and Master Studies in Hanover </b></u>
 							<br>In 2010, I started my scientific journey with the admission to the biochemistry program at the Leibniz University in Hanover, Germany. Choosing a field of study for the undergrad was quite challenging as I had a broad interest in natural sciences and math but also felt that the application and translation of basic science were important. The biochemistry program in Hanover was a collaboration between University and Medical school aiming to provide a broad basic science education combined with the prospect of medical applications, so it was a great fit for me. In addition, I had the chance to enjoy the life in a vibrant city offering a great mix of music scenes, history, and nature. <br>
@@ -150,7 +150,11 @@
 							<div class="col-6 col-12-xsmall">
 									<h4>Preprints - Manuscripts in Preparation</h4>
 									<ol reversed>
-											<li>Frei MS, Sanchez SA, Liu L, Schneider F, Wang Z, Hakozaki H, Li Y, Lyons AC, Rohm TV, Olefsky JM, Shi L, Schoneberg J, Fraser SE, Mehta S, Wang Y, Zhang J.  <br>
+										<li>Urbančič I, Schneider F, Galiani S, Sezgin E, Eggeling C.<br>
+											<i>Spectral STED microscopy improves spectral sensitivity with polarity-sensitive probes and enables correlative measurements of membrane order and anomalous lipid diffusion</i><br>
+											<a href="https://www.biorxiv.org/content/10.1101/2025.02.06.636942v1" target="_blank">bioRxiv doi.org/10.1101/2025.02.06.636942</a>. 2025 
+										</li>
+										<li>Frei MS, Sanchez SA, Liu L, Schneider F, Wang Z, Hakozaki H, Li Y, Lyons AC, Rohm TV, Olefsky JM, Shi L, Schoneberg J, Fraser SE, Mehta S, Wang Y, Zhang J.  <br>
 											<i>Far-red chemigenetic biosensors for multi-dimensional and super-resolved kinase activity imaging </i><br>
 											<a href="https://www.biorxiv.org/content/10.1101/2024.02.10.579766v1" target="_blank">bioRxiv doi.org/10.1101/2024.02.10.579766</a>. 2024 
 										</li>
