--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
 									<h4>Published Research Articles</h4>
 									<ol reversed>
 										<li>
+											Karedla N, Schneider F, Enderlein J, Chen T.<br> 
+											<i>Leaflet-specific Structure and Dynamics of Solid and Polymer Supported Lipid Bilayers</i><br> 
+											<a href="https://onlinelibrary.wiley.com/doi/10.1002/anie.202423784" target = "_blank"> Angew. Chem. Int. Ed., 1433-7851</a>. 2025 <br>
+										</li>
+										<li>
 											Schneider F, Cespedes PF, Karedla N, Dustin ML, Fritzsche M. <br> 
 											<i>Quantifying biomolecular organisation in membranes with brightness-transit statistics</i><br> 
 											<a href="https://www.nature.com/articles/s41467-024-51435-1" target = "_blank"> Nat Commun 15, 7082</a>. 2024 <br>
