--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
 						<strong>Falk Schneider, PhD</strong><br />
 					</h1>
 					<h5>
-						Incoming Assistant Professor at <br /> 
-						<a href="https://warwick.ac.uk/fac/sci/med/research/biomedical/labs/fschneider/" target = "_blank">Warwick Medical School | University of Warwick </a> <br /> (Lab doors open March 2025) <br /> 
-						Currently, EMBO|HFSP Postdoctoral Fellow at <br />
-						<a href="https://bioimage.usc.edu/" target = "_blank">Translational Imaging Center</a>, <br />University of Southern California
+						Assistant Professor<br /> 
+						<a href="https://warwick.ac.uk/fac/sci/med/research/biomedical/labs/fschneider/" target = "_blank">FMD Lab</a>  <br />  
+						<a href="https://warwick.ac.uk/fac/sci/med/" target = "_blank">Warwick Medical School</a>  <br />  
+						 <a href="https://warwick.ac.uk/" target = "_blank"> University of Warwick </a>  <br /> 
+						
 					</h5>
 					<a class="active" href="#one">About me</a>
 					<br>
