--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 -->
 <html>
 	<head>
-		<title>Falk Schneider, PhD | EMBO and HFSP Postdoctoral Fellow</title>
+		<title>Falk Schneider, PhD | Assistant Professor FMD Lab</title>
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon" /> 
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />.
 		<meta charset="utf-8" />
