--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
 							<div class="col-6 col-12-xsmall">
 									<h4>Preprints - Manuscripts in Preparation</h4>
 									<ol reversed>
+											<li>Cherchia L, Fraser SE, Finley SD, Schneider F.<br>
+											<i>Prolactin receptor localization and dynamics: Insights from quantitative imaging and mathematical modeling</i><br>
+											<a href="https://www.biorxiv.org/content/10.1101/2025.10.14.682359v1" target="_blank">bioRxiv doi.org/10.1101/2025.10.14.682359</a>. 2025 
+										</li>
 										<li>Urbančič I, Schneider F, Galiani S, Sezgin E, Eggeling C.<br>
 											<i>Spectral STED microscopy improves spectral sensitivity with polarity-sensitive probes and enables correlative measurements of membrane order and anomalous lipid diffusion</i><br>
 											<a href="https://www.biorxiv.org/content/10.1101/2025.02.06.636942v1" target="_blank">bioRxiv doi.org/10.1101/2025.02.06.636942</a>. 2025 
@@ -165,6 +169,10 @@
 									</ol>
 									<h4>Published Research Articles</h4>
 									<ol reversed>
+										<li>Scott W, Ivorra-Molla E, Akhuli D, Massam-Wu T, Lysyganicz PK, Walsh R, Parent M, Cook J, Song L, Kumar A, Schneider F, Mishima M, Crow A, Balasubramanian M.  <br>
+											<i>StayRose: a photostable StayGold derivative red-shifted by genetic code expansion  </i><br>
+											<a href="https://doi.org/10.1016/j.jbc.2025.110832" target = "_blank">J Biol Chem</a>. 2025 <br>
+										</li>
 										<li>Frei MS, Sanchez SA, He X, Liu L, Schneider F, Wang Z, Hakozaki H, Li Y, Lyons AC, Rohm TV, Olefsky JM, Shi L, Schoneberg J, Fraser SE, Mehta S, Wang Y, Zhang J.  <br>
 											<i>Far-red chemigenetic kinase biosensors enable multiplexed and super-resolved imaging of signaling networks  </i><br>
 											<a href="https://www.nature.com/articles/s41587-025-02642-8" target = "_blank"> Nat. Biotechnol.</a>. 2025 <br>
