Add FMD page link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					</h1>
 					<h5>
 						Assistant Professor<br /> 
-						<a href="https://warwick.ac.uk/fac/sci/med/research/biomedical/labs/fschneider/" target = "_blank">FMD Lab</a>  <br />  
+						<a href="https://fmd-lab.org/" target = "_blank">FMD Lab</a>  <br />  
 						<a href="https://warwick.ac.uk/fac/sci/med/" target = "_blank">Warwick Medical School</a>  <br />  
 						 <a href="https://warwick.ac.uk/" target = "_blank"> University of Warwick </a>  <br /> 
 						
@@ -58,8 +58,8 @@
 							</h2>
 						</header>
 						<p>I am a biochemist by training and excited to understand how molecular motion of bio-molecules translates to biological function across scales. It is utterly fascinating that the nano-scale interaction of only a few proteins such as transmembrane receptors binding their to ligands or transcription factors binding to DNA, can completely reshape the structure and function of a cell and even impact on whole tissues and organisms. To study these processes, I employ a variety of imaging, spectroscopy and molecular biology tools as well as <i>in vitro</i> model membrane systems, cell culture models, and animal models. Ultimately, I build tools and aim to answer fundamental questions about the dynamic organization of biological systems from the bottom up. <br><br>
-						<span class="image left"><img src="images/FMD_Logo_try.png" width="200" height="200" alt="Fluorescence and Membrane Dynamics (FMD) Lab Logo" /></span> 
-						Since March 2025, I am leading the <a href="https://warwick.ac.uk/fac/sci/med/research/biomedical/labs/fschneider/" target = "_blank">Fluorescence and Membrane Dynamics (FMD) Lab</a> at the University of Warwick. We are part of the <a href="https://mechanochemistry.org/" target = "_blank"> Centre for Mechanochemical Cell Biology (CMCB) </a> and the Cellular Interfaces Cluster. We are bringing together cell biologists, developmental biologists, and microscopists to understand the role of membrane organisation in the fundamental processes of life. Our main tools are fluorescence microscopy and spectroscopy and we are working hard to make every photon count. </p>
+						<a href ="https://fmd-lab.org/" target = "_blank"><span class="image left"><img src="images/FMD_Logo_try.png" width="200" height="200" alt="Fluorescence and Membrane Dynamics (FMD) Lab Logo" /></span> </a>
+						Since March 2025, I am leading the <a href="https://fmd-lab.org/" target = "_blank">Fluorescence and Membrane Dynamics (FMD) Lab</a> at the University of Warwick. We are part of the <a href="https://mechanochemistry.org/" target = "_blank"> Centre for Mechanochemical Cell Biology (CMCB) </a> and the Cellular Interfaces Cluster. We are bringing together cell biologists, developmental biologists, and microscopists to understand the role of membrane organisation in the fundamental processes of life. Our main tools are fluorescence microscopy and spectroscopy and we are working hard to make every photon count. </p>
 					<!-- Would be great to have a fancy/shiny image here xD -->
 					</section>
 
@@ -153,7 +153,7 @@
 							<div class="col-6 col-12-xsmall">
 									<h4>Preprints - Manuscripts in Preparation</h4>
 									<ol reversed>
-											<li>Cherchia L, Fraser SE, Finley SD, Schneider F.<br>
+										<li>Cherchia L, Fraser SE, Finley SD, Schneider F.<br>
 											<i>Prolactin receptor localization and dynamics: Insights from quantitative imaging and mathematical modeling</i><br>
 											<a href="https://www.biorxiv.org/content/10.1101/2025.10.14.682359v1" target="_blank">bioRxiv doi.org/10.1101/2025.10.14.682359</a>. 2025 
 										</li>
