--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<strong>Falk Schneider, PhD</strong><br />
 					</h1>
 					<h5>
-						Assistant Professor<br /> 
+						<a href= "https://warwick.ac.uk/fac/sci/med/research/biomedical/labs/fschneider/" target="_blank">Assistant Professor</a><br /> 
 						<a href="https://fmd-lab.org/" target = "_blank">FMD Lab</a>  <br />  
 						<a href="https://warwick.ac.uk/fac/sci/med/" target = "_blank">Warwick Medical School</a>  <br />  
 						 <a href="https://warwick.ac.uk/" target = "_blank"> University of Warwick </a>  <br /> 
